@@ -3,13 +3,45 @@ Team members: Askhat Shailoobekov, Maksatbek Kanybekuulu
 
 Presenting with YouTube: https://youtu.be/9T2aNCDsqeU
 
+
+Github [Link to a git repository (20 pts max) it should have] ✅
+
+    readme.md ✓
+    description ✓
+    some screenshots ✓
+    team members list (also should in contributors) ✓
+    commit history (should start from more than 1 week before submission) ✓
+
+Code (20 pts max) ✅
+
+    valid ✓
+    clean ✓
+    no comments please
+
+Presentation (20 pts max) ✅
+
+    video on youtube inside github (20 pts max) ✓
+    powerpoint presentation (5 pts) 
+
+Feedback (20 pts max) ✅
+
+    video feedback (10 pts each) if you submit link to google drive, please, grant access to anyone, who has the link.
+    text feedback (2 pts each)
+
+DataStorage (20 pts max) ✅
+
+    sqlite (10 pts) ✓
+    mysql (15 pts) ✓
+    PostgreSQL/MSSQL (20 pts) ✓
+
+Bonus points for:
+
+    mentioning University (All app is about Uni then +20 pts, if text or logo or photo +5pts) ✅
+    write a tutorial (how to create your app) + 20pts ❎
+
+
+
 Login: admin || Password: alatoo123
-
-We create JAR. file, you can execute. It is inside "out/artifacts/AlatooMedicalCare_jar"
-
-For linux System this command help you to execute => java --module-path /home/askhat/Documents/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar JavaFX-OOP.jar
-
-Change /home/askhat/Documents/javafx-sdk-11.0.2/lib/ ==> Path to your javafx lib. and don't forget change JavaFX-OOP.jar layed directory. 
 
 <img src="https://user-images.githubusercontent.com/49748480/103016470-46b53f80-456c-11eb-999c-e30803216d8b.png" width="720" height="480" />
 
